tests/snapshots/file@regression@_394.lox.snap
---
source: tests/common/mod.rs
description: "{\n  class A {}\n  class B < A {}\n  print B; // expect: B\n}\n"
input_file: crafting_interpreters_test_files/regression/_394.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found 'class'
   ╭─[2:3]
 1 │ {
 2 │   class A {}
   ·   ──┬──
   ·     ╰── here
 3 │   class B < A {}
   ╰────
Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found 'class'
   ╭─[3:3]
 2 │   class A {}
 3 │   class B < A {}
   ·   ──┬──
   ·     ╰── here
 4 │   print B; // expect: B
   ╰────
Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found '}'
   ╭─[5:1]
 4 │   print B; // expect: B
 5 │ }
   · ┬
   · ╰── here
   ╰────
