tests/snapshots/file@super@super_in_closure_in_inherited_method.lox.snap
---
source: tests/common/mod.rs
description: "class A {\n  say() {\n    print \"A\";\n  }\n}\n\nclass B < A {\n  getClosure() {\n    fun closure() {\n      super.say();\n    }\n    return closure;\n  }\n\n  say() {\n    print \"B\";\n  }\n}\n\nclass C < B {\n  say() {\n    print \"C\";\n  }\n}\n\nC().getClosure()(); // expect: A\n"
input_file: crafting_interpreters_test_files/super/super_in_closure_in_inherited_method.lox
---
OUT: 
A

===
ERR:
